--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-shoping-cart",
-  "proxy": "http://localhost:5000",
+  "proxy": "https://localhost:5001",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
